# estudio_rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/concepts/: array_slice_vec_string.rs  clousures.rs  comparisons.rs  error_result.rs  estructuras_ids.rs  futures_async.rs  iterators.rs  lifetimes.rs  memory_and_types.rs  modules_demo.rs  pin.rs  references_vs_values.rs  references_vs_values_performance.rs  stack_vs_heap_performance.rs  syntax_sugar.rs  testing_demo.rs  traits_concepts.rs
src/estudios/: array_slice_vec_string.rs  clousures.rs  comparisons.rs  comparisons_equal_partial_greater.rs  error_result.rs  estructuras_ids.rs  futures_demo.rs  iteradores.rs  iterators.rs  lifetimes.rs  memory_and_types.rs  mod.rs  modules_demo.rs  pin.rs  pin_demo.rs  referencias_vs_valor.rs  stack_vs_heap.rs  stackframes.rs  stacks_func.rs  sync_send.rs  sync_send_demo.rs  syntax_sugar.rs  testing_demo.rs  traits_concepts.rs
src/modules_demo/: mod.rs  monolithic.rs
src/modules_demo/domain/: mod.rs  order.rs  user.rs
src/modules_demo/hybrid/: mod.rs
src/modules_demo/hybrid/user/: mod.rs  model.rs  repository.rs  service.rs
